<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:id="@+id/countryText"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            android:id="@+id/capitalText"
            android:layout_below="@+id/countryText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:id="@+id/longitudeText"
            android:layout_below="@+id/capitalText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:id="@+id/latitudeText"
            android:layout_below="@+id/longitudeText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="20dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:id="@+id/popText"
                android:layout_below="@+id/latitudeText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textSize="20dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pop_star_text"
                android:id="@+id/starText"
                android:layout_below="@+id/popText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textSize="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flagPicture"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            style="@style/buttonTheme"
            android:layout_below="@+id/starText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

</RelativeLayout>